<?xml version="1.0" encoding="utf-8" ?>

<resources>
   <!-- Action -->
   <string name="action_back">Back</string>
   <string name="action_cancel">Cancel</string>
   <string name="action_close">Close</string>
   <string name="action_copy">Copy</string>
   <string name="action_exit">Exit</string>
   <string name="action_no">No</string>
   <string name="action_ok">OK</string>
   <string name="action_roamingsettings">Roaming settings</string>
   <string name="action_send">Send</string>
   <string name="action_turnoff">Turn off</string>
   <string name="action_turnon">Turn on</string>
   <string name="action_wifisettings">WiFi settings</string>
   <string name="action_yes">Yes</string>
   <!-- Caption -->
   <string name="caption_addshortcut">Add shortcut</string>
   <string name="caption_checkforupdate">Check for update</string>
   <string name="caption_clearcache">Clear cache</string>
   <string name="caption_contact">Contact</string>
   <string name="caption_email">Email (optional)</string>
   <string name="caption_improvememory">Improve the memory</string>
   <string name="caption_languages">Languages</string>
   <string name="caption_latestchanges">Latest changes</string>
   <string name="caption_license">License</string>
   <string name="caption_lastupdate">Last update</string>
   <string name="caption_link">Link</string>
   <string name="caption_message">Message</string>
   <string name="caption_maintainer">Maintainer</string>
   <string name="caption_name">Name</string>
   <string name="caption_platform">Platform</string>
   <string name="caption_producer">Producer</string>
   <string name="caption_restoredefault">Restore to default</string>
   <string name="caption_version">Version</string>
   <string name="caption_vibrate">Vibrate</string>
   <string name="caption_architecture">Architecture</string>
   <!-- Error -->
   <string name="error_processingrequest">An error occurred while processing
      your request, try again.
   </string>
   <string name="error_requesttimedout">The request has timed out, try again.
   </string>
   <string name="error_sendingrequest">There is a problem with executing/sending
      the request.
   </string>
   <!-- Message -->
   <string name="message_appdoesnothaveperm">Warning: The application does not
      have required permissions.
   </string>
   <string name="message_appisuptodate">You are already using the latest
      version.
   </string>
   <string name="message_batteryislow">Notice: the battery charge is low.
   </string>
   <string name="message_cantbeempty">Cannot be empty</string>
   <string name="message_exitapplication">Are you sure you want to exit?
   </string>
   <string name="message_gotomarketdownload">Go to market and download it.
   </string>
   <string name="message_invalidemail">Email is not valid</string>
   <string name="message_memoryfreed">%s of application\'s memory has been
      freed.
   </string>
   <string name="message_memoryislow">Warning: the device\'s memory is low,
      close other applications or reboot the
      device!
   </string>
   <string name="message_messagesent">Your message has been sent.</string>
   <string name="message_newversionisavailable">A newer version of this
      application is available!
   </string>
   <string name="message_nointernet">You are not connected to the internet.
   </string>
   <string name="message_nologs">There are not any logs to show.</string>
   <string name="message_nonewchanges">No new changes.</string>
   <!-- Summary -->
   <string name="summary_appdescription">An free torch application for
      Android based devices. Lightweight,
      bug-free and without ads!
   </string>
   <string name="summary_autoclearcache">Automatically clear application\'s
      cache on exit.
   </string>
   <string name="summary_clearappcache">Clear the application\'s cache.</string>
   <string name="summary_createappshortcut">Create application\'s shortcut on
      home screen.
   </string>
   <string name="summary_feedback">Send comments, suggestions and bugs.</string>
   <string name="summary_languages">English, Persian</string>
   <string name="summary_lastupdate">2019</string>
   <string name="summary_latestchanges">
      &#160;Fix minor bugs.
   </string>
   <string name="summary_link">http://yousha.blog.ir</string>
   <string name="summary_developer">Yousha Aleayoub</string>
   <string name="summary_maintainer">Yousha Aleayoub</string>
   <string name="summary_restoreappsettings">Restore application\'s settings to
      default.
   </string>
   <string name="summary_suggestrungc">Suggest the VM to run GC and
      Rt-Finalization.
   </string>
   <string name="summary_touchopenapp">Touch to open the application.</string>
   <string name="summary_viewappsyssettings">View application\'s system
      settings
   </string>
   <string name="summary_viewerrorlogs">View error-reports that occurred in this
      application.
   </string>
   <string name="summary_key">Key</string>
   <!-- Title -->
   <string name="title_about">About</string>
   <string name="title_appname">Visionlight</string>
   <string name="title_options">Options</string>
   <string name="title_settings">Settings</string>
   <string name="title_errorlogs">Error logs</string>
   <string name="title_feedback">Feedback</string>
   <string name="title_debuginformation">Debug Information</string>
   <!-- Other -->
   <string name="newversion">New version: %1$s</string>
   <string name="preparing">Preparing…</string>
   <string name="processing">Processing…</string>
   <string name="android">Android %1$s - %2$s</string>
   <string name="category_application">Application</string>
   <string name="checking">Checking…</string>
   <string name="currentversion">Current version: %1$s</string>
   <string name="ishere">%1$s is here</string>
</resources>
