<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:id="@+id/scroll_latestchanges"
   style="@style/container_vertical"
   android:contentDescription="@string/caption_latestchanges"
   tools:context="application.OptionsPreference">

   <LinearLayout style="@style/container_vertical">

      <TextView
         style="@style/mix_appnameicon"
         android:text="@string/title_appname" />

      <TextView
         android:id="@+id/text_latestchanges_version"
         style="@style/text_caption" />

      <TextView
         style="@style/text_summary"
         android:text="@string/summary_latestchanges" />

      <RelativeLayout style="@style/container_horizontal_bottom">

         <Button
            android:id="@+id/button_latestchanges_ok"
            style="@style/button_bottom_single"
            android:hint="@string/action_ok"
            android:text="@string/action_ok" />
      </RelativeLayout>
   </LinearLayout>
</ScrollView>
